@@ -14,6 +14,7 @@ Example data for the files is a small family network
 * If only one file is initially imported, the row number corresponds to the node-id (node 0 is the reference node)
 * Property values not listed will not be set on the nodes or relationships.
 * Optionally property fields can have a type (defaults to String) indicated with name:type where type is one of (int, long, float, double, boolean, byte, short, char, string). The string value is then converted to that type. Conversion failure will result in abort of the import operation.
+* Property fields may also be arrays by adding "_array" to the types above and separating the data with commas.
 * for non-ascii characters make sure to add `-Dfile.encoding=UTF-8` to the commandline arguments
 * Optionally automatic indexing of properties can be configured with a header like `name:string:users` and a configured index in `batch.properties` like `batch_import.node_index=exact`
   then the property `name` will be indexed in the `users` index for each row with a value there
